<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="main_activity_name">Menu Principal</string>
    <string name="app_name">spun</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_venda">Gerenciar Venda</string>
    <string name="btn_cliente">Gerenciar Cliente</string>
    <string name="btn_produto">Gerenciar Produto</string>
    <string name="btn_contas">Contas a Receber</string>
    <string name="btn_dados_vendedor">Gerenciar Vendedor</string>
    <string name="btn_notificacoes">Controlar Notificações</string>
    <string name="title_activity_gerenciar_cliente">GerenciarCliente</string>
    <string name="title_activity_cadastro_vendedor">CadastroVendedorActivity</string>
    <string name="title_activity_novo_cliente">NovoCliente</string>
    <string name="title_activity_gerenciar_vendedor">GerenciarVendedor</string>

</resources>
